# aconai

./: LICENSE.txt  README.md  pyproject.toml
aconai/mathy/: eigenvalues.py  qr.py
aconai/pipelines/: __init__.py  data_provider.py  data_registry.py  row_accessor.py  test_data_provider.py  test_data_registry.py
aconai/pipelines/providers/: security_provider.py  test_security_provider.py  tidal_provider.py
notebooks/: data_downloads.ipynb  data_sets.ipynb  entropy.ipynb
tests/mathy/: test_eigenvalues.py  test_qr.py
tests/pipelines/: test_data_provider.py  test_row_accessor.py
tests/pipelines/providers/: test_tidal_provider.py
