[tool.poetry]
name = "aconai"
version = "0.1.0"
description = ""
authors = ["Adam Cataldo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
torch = "^2.7.0"
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
numpy = "^2.2.5"
pandas = "^2.2.3"
yfinance = "^0.2.56"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
